tdf#147529 - BASIC MsgBox: Check for missing optional parameters

Change-Id: Iecb47e0005c609ee1117d6fb141e810c0166806a